--- a/app/src/main/res/layout/activity_edititem.xml
+++ b/app/src/main/res/layout/activity_edititem.xml
@@ -132,7 +132,7 @@
         app:layout_constraintVertical_bias="0.378" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imgEdit"
         android:layout_width="177dp"
         android:layout_height="141dp"
         android:scaleType="centerCrop"
@@ -145,7 +145,7 @@
         app:layout_constraintVertical_bias="0.545" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/fbtnImgEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
