--- a/app/src/main/res/layout/activity_select_edit.xml
+++ b/app/src/main/res/layout/activity_select_edit.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_centerHorizontal="true"
         android:text="Your Items"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
         android:textColor="#000000"
@@ -30,8 +31,11 @@
         android:layout_height="40dp"
         android:foregroundGravity="center"
         android:scaleType="fitCenter"
+        android:layout_alignParentEnd="true"
         android:src="@drawable/vieworder"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="50dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.919"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,8 +44,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProduct"
-        android:layout_width="347dp"
-        android:layout_height="538dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/txtItem"
         android:layout_marginTop="10dp"
         android:foregroundGravity="center"
@@ -50,7 +54,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/imgViewOrder"
         app:layout_constraintVertical_bias="1.0"
         tools:listitem="@layout/your_item_list" />
 
@@ -70,4 +74,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.924" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
