--- a/app/src/main/res/layout/activity_reviewitems.xml
+++ b/app/src/main/res/layout/activity_reviewitems.xml
@@ -119,11 +119,11 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/txtGrandTotal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:text="700"
-                android:id="@+id/grandtotal"
                 android:textColor="@android:color/black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
